refactor: Remove unused tooltip-card component and its styles

--- a/angular/src/app/pages/light-novel-details/light-novel-details.component.html
+++ b/angular/src/app/pages/light-novel-details/light-novel-details.component.html
@@ -3,10 +3,14 @@
   *ngIf="lightNovel"
   [ngStyle]="{
     backgroundImage:
-      'url(/assets/img/lightNovelImg/' + lightNovel.slug + '.png)'
+      'url(/assets/img/lightNovelImg/' + lightNovel.slug + '.png)',
+      backgroundSize: 'cover',
   }"
 >
   <div class="row">
+    <p class="text-dark">
+      {{ "url(/assets/img/lightNovelImg/" + lightNovel.slug + ".png)" }},
+    </p>
     <div class="col d-flex justify-content-center my-5">
       <div class="card">
         <div class="card-body d-flex flex-column align-items-center mt-4">
