Revert "Merge branch 'main' into Simone"
This reverts commit adc1b6450609c2de85530b693c5197d07fce40e4, reversing
changes made to 5dcea4ee3d1d9154824cf4c604a949b5322ec12c.

--- a/angular/src/app/pages/users/users.component.scss
+++ b/angular/src/app/pages/users/users.component.scss
@@ -1,3 +1,20 @@
-.container {
+#container {
+  width: 100%;
   min-height: 80vh;
+  overflow: hidden;
+  padding: 0 3vw 0 3vw;
+}
+
+#container::after {
+  content: "";
+  background-image: url("../../../assets/img/pages/users.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(2px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
