--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.scss
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.scss
@@ -22,7 +22,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 50px;
+  height: 50px; /* Altezza uniforme */
   padding: 10px;
   box-sizing: border-box;
   text-align: center;
@@ -31,28 +31,28 @@
 
 @media (max-width: 1200px) {
   .col {
-    flex: 1 0 25%;
+    flex: 1 0 25%; /* Occupare 25% dello spazio per avere 4 per riga */
     max-width: 25%;
   }
 }
 
 @media (max-width: 992px) {
   .col {
-    flex: 1 0 33.33%;
+    flex: 1 0 33.33%; /* Occupare 33.33% dello spazio per avere 3 per riga */
     max-width: 33.33%;
   }
 }
 
 @media (max-width: 768px) {
   .col {
-    flex: 1 0 50%;
+    flex: 1 0 50%; /* Occupare 50% dello spazio per avere 2 per riga */
     max-width: 50%;
   }
 }
 
 @media (max-width: 576px) {
   .col {
-    flex: 1 0 100%;
+    flex: 1 0 100%; /* Occupare 100% dello spazio per avere 1 per riga */
     max-width: 100%;
   }
 }
