Revert "Merge branch 'davide' of https://github.com/mrz1mm/Team-2---BWIII into davide"
This reverts commit 0866dfba34802230f8e53e5bd38c108f23dbc0ae, reversing
changes made to 8e7ed9ae68d34316482ce99545476388f4790147.

--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -1,25 +1,24 @@
 <div
   class="container-fluid"
   [ngStyle]="{
-    backgroundImage: 'url()'
+    backgroundImage: 'url(../../../assets/img/pages/home.webp)',
+    backgroundRepeat: 'no-repeat',
+    backgroundSize: 'cover',
   }"
 >
   <div class="row">
     <div class="col-12">
       <h2>AREA CAROSELLO</h2>
-      <splide class="d-none d-lg-block">
+      <splide>
         <splide-slide *ngFor="let lightNovel of lightNovelsArray">
           <a routerLink="/lightNovelDetails/{{ lightNovel.id }}">
             <img
-              class="imgCarousel"
               [src]="
                 '../../../assets/img/lightNovelImg/' + lightNovel.slug + '.png'
               "
               alt="{{ lightNovel.title }}"
             />
-            <div class="carousel-caption d-none d-md-block p-0">
-              <p class="text-white mb-0">{{ lightNovel.title }}</p>
-            </div>
+            <p class="bg-dark text-white">{{ lightNovel.title }}</p>
           </a>
         </splide-slide>
       </splide>
