--- a/angular/src/app/shared-components/card-home/card-home.component.scss
+++ b/angular/src/app/shared-components/card-home/card-home.component.scss
@@ -3,14 +3,18 @@ a {
 }
 .card {
   border: none;
-  position: relative;
-
+  backdrop-filter: blur(16px);
+    background-color: rgba(255, 255, 255, 0.7);
   img {
     height: 150px;
     width: 150px;
     border-radius: 50%;
+    margin: 1em;
+    z-index: 1;
   }
-
+  h5 {
+    color: #addad1;
+  }
   span {
     border-radius: 20%;
     padding-inline: 0.5rem;
@@ -19,16 +23,5 @@ a {
 
   .bi {
     color: black;
-  }
-
-  app-tooltip-card {
-    display: none;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-  }
-
-  &:hover app-tooltip-card {
-    display: block;
   }
 }
