refactor: Update footer component HTML to fix broken link

--- a/angular/src/app/main-components/footer/footer.component.html
+++ b/angular/src/app/main-components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="d-flex justify-content-center align-items-center py-3 bg-light">
   <p class="text-center text-body-secondary mb-0">
     © {{ currentYear }}
-    <a class="text-black" href="https://github.com/mrz1mm">mr_z1m</a>, all
-    rights reserved.
+    <a class="text-black" href="https://github.com/mrz1mm">mr_z1m BLABLA</a>,
+    all rights reserved.
   </p>
 </footer>
