--- a/angular/src/app/shared-components/card-home/card-home.component.scss
+++ b/angular/src/app/shared-components/card-home/card-home.component.scss
@@ -4,11 +4,14 @@ a {
 .card {
   border: none;
   position: relative;
+  backdrop-filter: blur(16px);
+  background-color: rgba(255, 255, 255, 0.2);
 
   img {
     height: 150px;
     width: 150px;
     border-radius: 50%;
+    margin: 1em;
   }
 
   span {
@@ -16,7 +19,9 @@ a {
     padding-inline: 0.5rem;
     padding-block: 0.25rem;
   }
-
+  h5 {
+    color: #addad1;
+  }
   .bi {
     color: black;
   }
