--- a/angular/src/app/shared-components/user-card/user-card.component.scss
+++ b/angular/src/app/shared-components/user-card/user-card.component.scss
@@ -4,12 +4,16 @@ td{
   background-color: rgba(255, 255, 255, 0);
   overflow: hidden;
   color: white;
+}
+
   p{
     display: flex;
     justify-content: center;
     align-items: center;
   }
-}
+  .table td, .table th {
+    vertical-align: middle;
+  }
 th{
   background-color: #3b435e9f;
   color: white;
