refactor: Update styles and HTML structure for user card component, favourites component, and footer component

--- a/angular/src/app/pages/profile/favourites/favourites.component.scss
+++ b/angular/src/app/pages/profile/favourites/favourites.component.scss
@@ -1,6 +1,8 @@
-
+.container-fluid {
+  min-height: 80vh;
+}
 .imgBG {
-  background-image: url('../../../../assets/img/pages/favorites.png');
+  background-image: url("../../../../assets/img/pages/favorites.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
